[package]
name = "bybit_rs"
version = "0.1.6"
authors = [
    "Omambia Dauglous <omambiadauglous@gmail.com>",
    "NGENI Labs <https://ngeni.io>",
    "Dennis Mwangi <dennismwangidev@gmail.com>",
]
edition = "2018"
rust-version = "1.67"

description = "Fork of the Official Python3 API connector for Bybit's HTTP (bybit) and WebSockets APIs to rust"
documentation = "https://docs.rs/bybit_rs"
readme = "README.md"
homepage = "https://docs.rs/bybit_rs"
license = "MIT"
keywords = ["rust", "bybit_rs", "pybit_rust"]
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/domambia/bybit_rs"
exclude = ["example_folder"]
[lib]
name = "bybit_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
futures = "*"
thiserror = "*"

#JSON libs
serde_json = "*"
serde = "*"
serde_derive = "*"


#Request
reqwest = { version = "*", features = [
    "json",
    "default",
    "socks",
    "blocking",
    "stream",
    "rustls-tls",
] }
http = "*"
# encryption
sha2 = "*"
hmac = "*"
hex = "*"
regex = "*"
async-trait = "*"
# openssl = "*"
url = "*"
dotenv = "*"
ring = "*"
serde_urlencoded = "*"
once_cell = "*"
hmac-sha256 = "*"


[[bin]]
name = "run_test"
path = "example/bybit_test.rs"
